# SCDAT

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  surface_barrier_didv_gate.json  surface_barrier_didv_gate.md
Main/: CMakeLists.txt  SurfaceScenarioLoader.cpp  SurfaceScenarioLoader.h  main.cpp  main_PICcore.cpp  main_mesh_export.cpp
Toolkit/: CMakeLists.txt
Toolkit/Internal Charging/: DielectricBreakdownModel.cpp  DielectricBreakdownModel.h  DielectricMaterialDatabase.cpp  DielectricMaterialDatabase.h  DischargeChannelModel.cpp  ParticleTransportModel.h
Toolkit/Internal Charging/include/: DischargeChannelModel.h  InternalChargingCases.h  ParticleTransportModel.h  SpacecraftInternalChargingAlgorithm.h
Toolkit/Internal Charging/src/: InternalChargingCases.cpp  ParticleTransportModel.cpp  SpacecraftInternalChargingAlgorithm.cpp
Toolkit/Internal Charging/test/: CMakeLists.txt  InternalCharging_radiation_coupling_smoke_test.cpp  InternalCharging_smoke_test.cpp
Toolkit/Plasma Analysis/: DensePlasmaBoundaryLayer.cpp  DensePlasmaBoundaryLayer.h  DensePlasmaDetector.h  DiffusionSolverAdapter.cpp  DiffusionSolverAdapter.h  FluidAlgorithmAdapter.cpp  FluidAlgorithmAdapter.h  FluidAlgorithmConfig.h  FluidAlgorithmManager.h  PICFluidIntegration.cpp  PlasmaAnalysisCases.cpp
Toolkit/Plasma Analysis/include/: DensePlasmaBoundaryLayer.h  FluidAlgorithmAdapter.h  FluidAlgorithmConfig.h  FluidPicHybridCouplingInterface.h  MultiScaleSpatialDecomposer.h  MultiScaleTimeSynchronizer.h  PICFluidIntegration.h  PlasmaAdvancedClosureModel.h  PlasmaAnalysisCases.h  PlasmaReactionCollisionLibrary.h
Toolkit/Plasma Analysis/src/: DensePlasmaBoundaryLayer.cpp  DensePlasmaDetector.cpp  FluidAlgorithmAdapter.cpp  FluidAlgorithmManager.cpp  FluidPicHybridCouplingInterface.cpp  MultiScaleSpatialDecomposer.cpp  MultiScaleTimeSynchronizer.cpp  PICFluidIntegration.cpp  PlasmaAdvancedClosureModel.cpp  PlasmaAnalysisCases.cpp  PlasmaReactionCollisionLibrary.cpp
Toolkit/Plasma Analysis/test/: CMakeLists.txt  PlasmaAnalysis_smoke_test.cpp
Toolkit/Radiation/include/: RadiationCases.h  RadiationDoseAlgorithm.h  RadiationStoppingDataGovernance.h
Toolkit/Radiation/src/: RadiationCases.cpp  RadiationDoseAlgorithm.cpp  RadiationStoppingDataGovernance.cpp
Toolkit/Radiation/test/: CMakeLists.txt  Radiation_presets_smoke_test.cpp  Radiation_smoke_test.cpp
Toolkit/Surface Charging/: DensePlasmaSurfaceCharging.cpp  DensePlasmaSurfaceCharging.h  README.md  SurfaceChargingCases.cpp
Toolkit/Surface Charging/docs/: architecture.md  benchmark_workflow.md  native_surface_architecture_overview.md  native_surface_build_verification_notes.md  native_surface_mainline_workflow.md  spis_case_onboarding_guide.md  spis_import_compute_workflow.md  strict_per_source_particle_ledger_plan.md  surface_num_alignment_refactor_plan.md  surface_round10_equivalence_matrix.md  surface_spis_class_audit.csv  surface_spis_class_audit.json  surface_spis_class_audit_summary.md  top_default_class_runtime_mapping.md  top_shell_simulation_runtime_mapping.md  util_func_class_helper_mapping.md  util_instrument_catalog_observer_mapping.md
Toolkit/Surface Charging/include/: ChargeAccumulationModel.h  DensePlasmaSurfaceCharging.h  LegacyBenchmarkSupport.h  PicMccSurfaceCurrentSampler.h  ReferenceCurrentBalanceModel.h  SurfaceBridgeArtifactWriters.h  SurfaceChargingCases.h  SurfaceElectronCollectionModel.h  SurfaceFlowCouplingModel.h  SurfaceInstrumentObservability.h  SurfaceObserverArtifactExport.h  SurfaceRuntimePlan.h  SurfaceScenarioCatalog.h  SurfaceSimulationRunner.h  SurfaceTransitionEngine.h
Toolkit/Surface Charging/scripts/: analyze_legacy_benchmark_currents.py  augment_spis_source_resolved_output.py  benchmark_regression_gate.py  bundle_surface_case_outputs.py  compare_benchmark.py  compare_spis_java_output.py  import_spis_surface_case.py  reconstruct_legacy_leo_initial_body_current.py  run_child_langmuir_spis_workflow.py  run_external_field_bridge_stub.py  run_external_volume_bridge_stub.py  run_plasma_wake_spis_workflow.py  run_surface_external_bridge_roundtrip.py  spis_surface_import_lib.py  summarize_benchmark_report.py  summarize_surface_case.py  summarize_surface_results.py  surface_graph_summary.py
Toolkit/Surface Charging/src/: ChargeAccumulationModel.cpp  DensePlasmaSurfaceCharging.cpp  LegacyBenchmarkSupport.cpp  PicMccSurfaceCurrentSampler.cpp  ReferenceCurrentBalanceModel.cpp  SurfaceBridgeArtifactWriters.cpp  SurfaceChargingCases.cpp  SurfaceChargingKernelFramework.cpp  SurfaceChargingSpisFramework.cpp  SurfaceInstrumentObservability.cpp  SurfaceObserverArtifactExport.cpp  SurfaceRuntimePlan.cpp  SurfaceScenarioCatalog.cpp  SurfaceSimulationRunner.cpp  SurfaceTransitionEngine.cpp
Toolkit/Surface Charging/test/: CMakeLists.txt  SurfaceCharging_object_layer_test.cpp  SurfaceCharging_smoke_test.cpp
Toolkit/Vacuum Arc/: ArcDischargeDetector.cpp  CathodeSpotModel.cpp  CylindricalPICSolver.cpp  CylindricalPICSolver.h  PlasmaChannelModel.cpp  TownsendAvalancheModel.cpp
Toolkit/Vacuum Arc/include/: AnodeHeatingModel.h  ArcDischargeDetector.h  ArcEmissionStrategy.h  ArcFieldEmissionBoundaryCondition.h  ArcPICEmissionModel.h  ArcPICIntegrator.h  CathodeSpotModel.h  PlasmaChannelModel.h  SurfaceArcCoupling.h  SurfaceDischargeArcAlgorithm.h  TownsendAvalancheModel.h  VacuumArcCases.h
Toolkit/Vacuum Arc/src/: AnodeHeatingModel.cpp  ArcEmissionStrategy.cpp  ArcFieldEmissionBoundaryCondition.cpp  ArcPICEmissionModel.cpp  ArcPICIntegrator.cpp  CylindricalPICSolver.cpp  PlasmaChannelModel.cpp  SurfaceArcCoupling.cpp  SurfaceDischargeArcAlgorithm.cpp  VacuumArcCases.cpp
Toolkit/Vacuum Arc/test/: CMakeLists.txt  VacuumArc_presets_smoke_test.cpp  VacuumArc_smoke_test.cpp
Tools/: CMakeLists.txt
Tools/Basic/include/: ArrayMath3.h  Constants.h  ErrorCode.h  ErrorHandling.h  Logger.h  MathUtils.h  ModelRegistry.h  NumericAggregation.h  StringTokenUtils.h  VoidResult.h
Tools/Basic/test/: Basic_test.cpp  CMakeLists.txt
Tools/Boundary/include/: BoundaryConditions.h  (+2 more)
Tools/Particle/: 新建 文本文档.txt
(+248 files in other folders)
